crates/tui/tests/storybook/snapshots/app_transcript_group::background_process_group_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
background process 4210 finished successfully

background process 4211 exited with code 1

background process 4212 exited




  tip ctrl+enter / ctrl+q, steer the current response without waiting for…
────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────
 ○ normal                                                           1:1 100%
