crates/tui/tests/storybook/snapshots/app_transcript_group::explore_tool_group_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* explore ×5                                                                     14:37:03
  read_file src/lib.rs
  grep "render_group" in crates/tui/src
  glob **/*.rs in crates/tui/src
  outline crates/tui/src/app.rs, function containing "render", depth 2
  find_symbol RenderNode, enum, crates/tui/**/*.rs














─ ✿ working… ─────────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                         1:1 100%
