crates/tui/tests/storybook/snapshots/app_transcript_group::explore_tool_group_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* read_file src/lib.rs                                                           14:37:03
  2 lines

* grep render_group in crates/tui/src                                            14:37:03
  2 files

* glob **/*.rs in crates/tui/src                                                 14:37:03
  3 files

* outline crates/tui/src/app.rs, function containing "render", depth 2           14:37:03
  2 symbols

* find_symbol RenderNode, enum, crates/tui/**/*.rs                               14:37:03
  1 symbol






─ ✿ working… ─────────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                         1:1 100%
