crates/tui/tests/storybook/snapshots/app_transcript_group::glob_group_collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* glob ×2
  **/*.rs in crates/tui/src
  **/*.lua in runtime/lua/smelt





─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
