crates/tui/tests/storybook/snapshots/app_transcript_group::glob_group_expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* glob **/*.rs in crates/tui/src
  3 files

* glob **/*.lua in runtime/lua/smelt
  2 files









─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
